# python_application_blueprint

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pytest.ini  setup.cfg
