[metadata]
name = Project Name
# Version needs regex in setup.py.
url = VSC_URL
;project_urls =
;    Documentation = https://...
;    Code = https://...
;    Issue tracker = https://...
author = AUTHOR_NAME
author_email = username@example.com
description = APP_NAME
long_description = file: README.md
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.7

# [options.entry_points]
# console_scripts =
#     command=bin.APP_NAME:main  # put your shell execution scritps to bin forlder

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests

ilterwarnings =

    error